# covid19-stats

./: .gitignore  README.md  latest.json  latest.txt  package.json
.github/actions/average/: action.yml  index.js
.github/actions/cases/: action.yml  index.js
.github/workflows/: average.yml  cases.yml
2021/11/25/: latest.txt
2021/11/26/: latest.txt
2021/11/27/: latest.json  latest.txt
2021/11/28/: latest.json  latest.txt
2021/11/29/: latest.json  latest.txt
2021/11/30/: latest.json  latest.txt
2021/12/1/: latest.json  latest.txt
other/application/: App.js  app.json  package.json
other/scraper/nodejs/: README.md  package.json
other/scraper/nodejs/src/: index.js
other/scraper/nodejs/src/structures/: Data.js  Utils.js
other/scraper/nodejs/test/: index.test.js
other/scraper/nodejs/typings/: index.d.ts
other/scraper/python/: readme.md  setup.cfg
other/website/: alerts.json  package.json
other/website/pages/: _app.js  index.js
pages/: index.js
states/Czechia/: latest.json  latest.txt
states/Czechia/2021/12/02/: latest.json
states/Czechia/2021/12/04/: latest.txt
states/Czechia/2021/12/06/: latest.json  latest.txt
states/Czechia/2021/12/07/: latest.txt
states/Czechia/2021/12/09/: latest.txt
states/Czechia/2021/12/1/: latest.json  latest.txt
states/Czechia/2021/12/10/: latest.json  latest.txt
states/Czechia/2021/12/11/: latest.json  latest.txt
states/Czechia/2021/12/12/: latest.json  latest.txt
states/Czechia/2021/12/13/: latest.json  latest.txt
states/Slovakia/: latest.json  latest.txt
(+536 files in other folders)
