[metadata]
name = covid19-wrapper
version = 0.1.0
author = xHyroM
description = Covid19 wrapper, latest news
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xHyroM/covid19-stats
project_urls =
    Bug Tracker = https://github.com/xHyroM/covid19-stats/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src